--- a/source/components/button.less
+++ b/source/components/button.less
@@ -1,3 +1,8 @@
 .button {
-	color: gray;
+	color: rebeccapurple;
+	width: 25vw;
+	top-padding: 30px;
+	right-padding: 20px;
+	margin-top: 15px;
+	margin-left: 35vw;
 }
