--- a/source/components/starting-location.less
+++ b/source/components/starting-location.less
@@ -1,3 +1,8 @@
 .starting-location {
-	
+	color: rebeccapurple;
+	width: 40vw;
+	top-padding: 30px;
+	right-padding: 20px;
+	margin-top: 15px;
+	margin-left: 35vw;
 }
