Created component for displaying specific saved destinations.

--- a/source/components/saved-navigation.less
+++ b/source/components/saved-navigation.less
@@ -8,6 +8,9 @@
 	width: 100%;
 }
 
-.border {
-	border: .5vw solid black;
+th, td {
+	padding: 1vw;
+	border: .25vw solid black;
+	text-align: center;
+	width: 50%;
 }
