--- a/source/styles/index.less
+++ b/source/styles/index.less
@@ -1,7 +1,7 @@
-@import './normalize';
-@import './fonts';
+@import '../styles/normalize';
+@import '../styles/fonts';
 
-@import './variables';
+@import '../styles/variables';
 
 *,
 *::before,
@@ -10,7 +10,9 @@
 }
 
 html {
-	font-family: @sans-font-stack;
+	// font-family: @sans-font-stack;
+	font-family: -apple-system;
+	font-weight: 400;
 	color: @text-color;
 
 	box-sizing: border-box;
