Deleted text size button styling. Added styling for the text size text.

--- a/source/components/our-styles.less
+++ b/source/components/our-styles.less
@@ -88,14 +88,10 @@
 	width: 100%;
 }
 
-.text-size-button {
-	color: rebeccapurple;
-	top-padding: 30px;
-	right-padding: 20px;
-	margin-top: 5px;
-	margin-right: 15px;
+.text-size-type {
+	color: blue;
+	text-align: left;
 }
-
 th, td {
 	padding: 1vw;
 	border: .25vw solid black;
