Gave the About page some style.

--- a/source/components/our-styles.less
+++ b/source/components/our-styles.less
@@ -3,7 +3,17 @@
 }
 
 .about {
-	color: green;
+	color: rebeccapurple;
+	text-align: center;
+	margin-top: 5vw;
+}
+
+.about-text {
+	color: rebeccapurple;
+	text-align: left;
+	margin-top: 5vw;
+	margin-left: 10vw;
+	margin-right: 10vw;
 }
 
 .button {
@@ -89,7 +99,7 @@
 }
 
 .text-size-type {
-	color: blue;
+	color: rebeccapurple;
 	text-align: left;
 }
 th, td {
