Created more subcomponents for the main navigation page: buttons for the menu bar, navigation map and floor map for the navigation area, and applied styles where needed.

--- a/source/components/our-styles.less
+++ b/source/components/our-styles.less
@@ -31,6 +31,12 @@
 	margin-top: 5vw;
 }
 
+.destination {
+	color: rebeccapurple;
+	display: inline;
+	margin-right: 1vw;
+}
+
 .ending-location {
 	color: rebeccapurple;
 	width: 40vw;
@@ -53,6 +59,12 @@
 	color: rebeccapurple;
 	text-align: center;
 	margin-top: 5vw;
+}
+
+.main-navigation-button {
+	color: rebeccapurple;
+	width: 20.5vw;
+	margin-right: 1vw;
 }
 
 .round-button {
