--- a/source/components/our-styles.less
+++ b/source/components/our-styles.less
@@ -1,7 +1,3 @@
-* {
-	font-size: 100%;
-}
-
 .about {
 	color: rebeccapurple;
 	text-align: center;
@@ -23,6 +19,13 @@
 	right-padding: 20px;
 	margin-top: 15px;
 	margin-left: 35vw;
+}
+
+.category {
+	background: none;
+	color: rebeccapurple;
+	margin-right: 8vw;
+	margin-left: 5vw;
 }
 
 .create-new-navigation {
@@ -114,6 +117,7 @@
 	color: rebeccapurple;
 	text-align: left;
 }
+
 th, td {
 	padding: 1vw;
 	border: .25vw solid black;
