--- a/source/components/our-styles.less
+++ b/source/components/our-styles.less
@@ -78,6 +78,12 @@
 	margin-left: 80vw;
 }
 
+.search {
+	color: gray;
+	margin-left: 40vw;
+	margin-bottom: 3vw;
+}
+
 .settings {
 	color: rebeccapurple;
 	text-align: center;
