Deleted the individual styles for the header at the top of the about, create new navigation, and settings pages. Deleted the help style. Added the help-header style and the help-text style. Added documentation.

--- a/source/components/our-styles.less
+++ b/source/components/our-styles.less
@@ -1,8 +1,6 @@
-.about {
-	color: rebeccapurple;
-	text-align: center;
-	margin-top: 5vw;
-}
+/* This is the style page for the entire application. We realize that it probably isn't good 
+coding style, but the number of files devoted to style would be ridiculously long otherwise. */
+/* The defined styles are listed in alphabetical order. */
 
 .about-text {
 	color: rebeccapurple;
@@ -28,12 +26,6 @@
 	margin-left: 5vw;
 }
 
-.create-new-navigation {
-	color: rebeccapurple;
-	text-align: center;
-	margin-top: 5vw;
-}
-
 .destination {
 	color: rebeccapurple;
 	display: inline;
@@ -51,11 +43,17 @@
 }
 
 .heading {
+	color: rebeccapurple;
 	text-align: center;
+	margin-top: 5vw;
 }
 
-.help {
-	color: green;
+.help-header {
+	color: rebeccapurple;
+}
+
+.help-text {
+	margin-left: 15px;
 }
 
 .main-menu {
@@ -82,12 +80,6 @@
 	color: gray;
 	margin-left: 40vw;
 	margin-bottom: 3vw;
-}
-
-.settings {
-	color: rebeccapurple;
-	text-align: center;
-	margin-top: 5vw;
 }
 
 .settings-button {
