When text can't fit inside button, the words now breaks into a new line.

--- a/source/components/our-styles.less
+++ b/source/components/our-styles.less
@@ -12,11 +12,12 @@ coding style, but the number of files devoted to style would be ridiculously lon
 
 .button {
 	color: rebeccapurple;
-	width: 25vw;
+	width: 30vw;
+	word-wrap: break-word;
 	top-padding: 30px;
 	right-padding: 20px;
 	margin-top: 15px;
-	margin-left: 35vw;
+	margin-left: 30vw;
 }
 
 .category {
